add flashcard css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Javascripted Flip Cards for Blackboard</title>
+    <title>Javascripted Flash Cards for Blackboard</title>
+    <link rel="style" href="css/main.css" type="text/css">
   </head>
   <body>
 <div class="wiley-flip-cards">
