add new flash card text: Rick/Daryl/Eugene

--- a/index.html
+++ b/index.html
@@ -4,35 +4,41 @@
     <link rel="style" href="css/main.css" type="text/css">
   </head>
   <body>
-<div class="wiley-flip-cards">
-<div class="wiley-flip-card">
-<div class="wiley-flip-card-front jhucar" tabindex="0">
-<p>Executive Directors</p>
-</div>
-<div class="wiley-flip-card-back jhucar" tabindex="0">
-<p>Executive directors hold an operational position in the company. They are responsible for the day-to-day operations and results; best placed to develop, set, and implement strategy.</p>
-</div>
-</div>
-<div class="wiley-flip-card">
-<div class="wiley-flip-card-front jhucar" tabindex="0">
-<p>Non-executive Directors</p>
-</div>
-<div class="wiley-flip-card-back jhucar" tabindex="0">
-<p>Non-executive directors (<span><span>NEDs</span></span>) do not hold an executive position and may or may not be independent. <span><span>NEDs</span></span> contribute an outside perspective and greater impartiality in their judgments; additional external experience and knowledge; useful contacts.</p>
-</div>
-</div>
-<div class="wiley-flip-card">
-<div class="wiley-flip-card-front jhucar" tabindex="0">
-<p>Independent Directors</p>
-</div>
-<div class="wiley-flip-card-back jhucar" tabindex="0">
-<p>An independent director (ID) has no material relationship with the company beyond his or her directorship. IDs ensure the board includes individuals who exercise objective <span><span>judgement</span></span> for the exclusive benefit of the company and its shareholders.</p>
-</div>
-</div>
-</div>
+    <header>
+      <h1>Get to know your Walking Dead Survivors</h1>
+      <p>Click each character's card to learn more</p>
+  <div class="wiley-flip-cards">
+  <div class="wiley-flip-card">
+  <div class="wiley-flip-card-front jhucar" tabindex="0">
+  <p>Rick Grimes</p>
+  </div>
+  <div class="wiley-flip-card-back jhucar" tabindex="0">
+  <p>Calm, cool and collected at least when until he goes bat-shit crazy, Rick is thought to be dead by the other survivor after an explosion</p>
+  </div>
+  </div>
+  <div class="wiley-flip-card">
+  <div class="wiley-flip-card-front jhucar" tabindex="0">
+  <p>Daryl Dixon</p>
+  </div>
+  <div class="wiley-flip-card-back jhucar" tabindex="0">
+  <p>They say 'if Daryl dies we riot' but he's gotten pretty boring as he now lives out in the wood alone with a dog named Dog (seriously)</p>
+  </div>
+  </div>
+  <div class="wiley-flip-card">
+  <div class="wiley-flip-card-front jhucar" tabindex="0">
+  <p>Eugene</p>
+  </div>
+  <div class="wiley-flip-card-back jhucar" tabindex="0">
+  <p>Up until recently Eugene with with mostly known for his epic Tennesse Top-Hat and know for being business upfront party in the rear, he also knows how to make bullets.</p>
+  </div>
+  </div>
+  </div>
+    <main>
+      <h2>Javascripted Flash Cards for LMS import</h2>
+    
+    </main>
+    <footer> Graphic Markus Media &copy; 2018 </footer>
+  </div>
 <script type="text/javascript" src="js/main.js"></script>
-<p>An independent director (ID) is a director who has no material relationship with the company beyond his or her directorship. IDs ensure that the board includes individuals who can effectively exercise objective <span><span>judgement</span></span> for the exclusive benefit of the company and its shareholders.</p>
-<p><strong>Director Pay:</strong> The data provided by Spencer Stuart indicate that the average retainer for directors in the US is $91,000, but this varies widely depending on the size and type of corporation. To better align the interests of directors with those of shareholders, firms have increasingly paid directors in stock rather than cash, and many require that directors invest their own money in the firm’s shares. Many companies pay directors a bonus for each board meeting attended, and this even includes <span><span>teleconferences—a</span></span> way that companies are handling the geographic divide and demands of a global workplace.</p>
-</div>
   </body>
 </html>
