fix js/css linking issue

--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <html>
   <head>
     <title>Javascripted Flash Cards for Blackboard</title>
-    <link rel="style" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css" id="cssId">
   </head>
   <body>
     <header>
       <h1>Get to know your Walking Dead Survivors</h1>
       <p>Click each character's card to learn more</p>
-  <div class="wiley-flip-cards">
-  <div class="wiley-flip-card">
-  <div class="wiley-flip-card-front jhucar" tabindex="0">
+  <div class="flashcards">
+  <div class="flashcard">
+  <div class="flashcard-front jhucar" tabindex="0">
   <p>Rick Grimes</p>
   </div>
-  <div class="wiley-flip-card-back jhucar" tabindex="0">
+  <div class="flashcard-back jhucar" tabindex="0">
   <p>Calm, cool and collected at least when until he goes bat-shit crazy, Rick is thought to be dead by the other survivor after an explosion</p>
   </div>
   </div>
-  <div class="wiley-flip-card">
-  <div class="wiley-flip-card-front jhucar" tabindex="0">
+  <div class="flashcard">
+  <div class="flashcard-front jhucar" tabindex="0">
   <p>Daryl Dixon</p>
   </div>
-  <div class="wiley-flip-card-back jhucar" tabindex="0">
+  <div class="flashcard-back jhucar" tabindex="0">
   <p>They say 'if Daryl dies we riot' but he's gotten pretty boring as he now lives out in the wood alone with a dog named Dog (seriously)</p>
   </div>
   </div>
-  <div class="wiley-flip-card">
-  <div class="wiley-flip-card-front jhucar" tabindex="0">
+  <div class="flashcard">
+  <div class="flashcard-front jhucar" tabindex="0">
   <p>Eugene</p>
   </div>
-  <div class="wiley-flip-card-back jhucar" tabindex="0">
+  <div class="flashcard-back jhucar" tabindex="0">
   <p>Up until recently Eugene with with mostly known for his epic Tennesse Top-Hat and know for being business upfront party in the rear, he also knows how to make bullets.</p>
   </div>
   </div>
   </div>
     <main>
       <h2>Javascripted Flash Cards for LMS import</h2>
-    
+
     </main>
     <footer> Graphic Markus Media &copy; 2018 </footer>
   </div>
