--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Rick Grimes</p>
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
-  <p>Calm, cool and collected at least when until he goes bat-shit crazy, Rick is thought to be dead by the other survivor after an explosion</p>
+  <p>Calm, cool and collected at least when until he goes bat-shit crazy, Rick is thought to be dead by the other survivors after an explosion</p>
   </div>
   </div>
   <div class="flashcard">
@@ -21,7 +21,7 @@
   <p>Daryl Dixon</p>
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
-  <p>They say 'if Daryl dies we riot' but he's gotten pretty boring as he now lives out in the wood alone with a dog named Dog (seriously)</p>
+  <p>They say 'if Daryl dies we riot' but he's gotten pretty boring as he know lives out in the woods alone with a dog named Dog (seriously)</p>
   </div>
   </div>
   <div class="flashcard">
@@ -29,7 +29,7 @@
   <p>Eugene</p>
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
-  <p>Up until recently Eugene with with mostly known for his epic Tennesse Top-Hat and know for being business upfront party in the rear, he also knows how to make bullets.</p>
+  <p>Up until recently Eugene was mostly known for his epic Tennesse Top-Hat which is business upfront party in the rear, he also knows how to make bullets.</p>
   </div>
   </div>
   </div>
