--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </main>
     <footer> Graphic Markus Media &copy; 2018 </footer>
   </div>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="https://mnowowiejski.github.io/jhu-flipcards/js/main.js"></script>
   </body>
 </html>
