--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="flashcard">
   <div class="flashcard-front jhucar" tabindex="0">
   <p>Rick Grimes</p>
-  <img src="images/rick.jpg" alt="Rick Grimes" width="150" />
+  <img src="https://mnowowiejski.github.io/jhu-flipcards/images/rick.jpg" alt="Rick Grimes" width="150" />
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
   <p>Calm, cool and collected at least when until he goes bat-shit crazy, Rick is thought to be dead by the other survivors after an explosion</p>
@@ -20,7 +20,7 @@
   <div class="flashcard">
   <div class="flashcard-front jhucar" tabindex="0">
   <p>Daryl Dixon</p>
-    <img src="images/daryl.jpg" alt="Daryl Dixon" width="150" />
+    <img src="https://mnowowiejski.github.io/jhu-flipcards/images/daryl.jpg" alt="Daryl Dixon" width="150" />
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
   <p>They say 'if Daryl dies we riot' but he's gotten pretty boring as he know lives out in the woods alone with a dog named Dog (seriously)</p>
@@ -29,7 +29,7 @@
   <div class="flashcard">
   <div class="flashcard-front jhucar" tabindex="0">
   <p>Eugene</p>
-  <img src="images/eugene.jpg" alt="Eugene Porter" width="150" />
+  <img src="https://mnowowiejski.github.io/jhu-flipcards/images/eugene.jpg" alt="Eugene Porter" width="150" />
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
   <p>Up until recently Eugene was mostly known for his epic Tennesse Top-Hat which is business upfront party in the rear, he also knows how to make bullets.</p>
