--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="https://mnowowiejski.github.io/jhu-flipcards/images/rick.jpg" alt="Rick Grimes" width="150" />
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
-  <p>Calm, cool and collected at least when until he goes bat-shit crazy, Rick is thought to be dead by the other survivors after an explosion</p>
+  <p>Calm, cool and collected at least until he goes bat-shit crazy, Rick is thought to be dead by the other survivors after an explosion</p>
   </div>
   </div>
   <div class="flashcard">
@@ -23,7 +23,7 @@
     <img src="https://mnowowiejski.github.io/jhu-flipcards/images/daryl.jpg" alt="Daryl Dixon" width="150" />
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
-  <p>They say 'if Daryl dies we riot' but he's gotten pretty boring as he know lives out in the woods alone with a dog named Dog (seriously)</p>
+  <p>They say 'if Daryl dies we riot' but he's gotten pretty boring as he now lives out in the woods alone with a dog named Dog (seriously)</p>
   </div>
   </div>
   <div class="flashcard">
