--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="https://mnowowiejski.github.io/jhu-flipcards/images/rick.jpg" alt="Rick Grimes" width="150" />
   </div>
   <div class="flashcard-back jhucar" tabindex="0">
-  <p>Calm, cool and collected at least until he goes bat-shit crazy, Rick is thought to be dead by the other survivors after an explosion</p>
+  <p>Calm, cool and collected at least until he goes completely crazy, Rick is thought to be dead by the other survivors after an explosion</p>
   </div>
   </div>
   <div class="flashcard">
